crates/parser/src/snapshots/parser__tests__parse_string_literal.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "\"hello\""
---
Root@0..7
  String@0..7
    String@0..7 "\"hello\""
