crates/parser/src/snapshots/parser__tests__parse_string_literal_empty.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "\"\""
---
Root@0..2
  String@0..2
    String@0..2 "\"\""
