crates/parser/src/snapshots/parser__tests__parse_unary_not.snap
---
source: crates/parser/src/lib.rs
expression: "&parse.debug_tree()"
info:
  code: "!x"
---
Root@0..2
  UnaryExpression@0..2
    Bang@0..1 "!"
    VariableReference@1..2
      Identifier@1..2 "x"
