crates/parser/src/snapshots/parser__tests__parse_use_as_alias.snap
---
source: crates/parser/src/lib.rs
expression: "& parse.debug_tree()"
info:
  code: "use foo::bar as baz;"
---
Root@0..20
  UseStatement@0..20
    Use@0..3 "use"
    Whitespace@3..4 " "
    UsePath@4..13
      Identifier@4..7 "foo"
      DoubleColon@7..9 "::"
      Identifier@9..12 "bar"
      Whitespace@12..13 " "
    As@13..15 "as"
    Whitespace@15..16 " "
    Identifier@16..19 "baz"
    Semicolon@19..20 ";"
